--- a/chamber.html
+++ b/chamber.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ikot Ekpene Chamber of Commerce</title>
+  <link rel="stylesheet" href="styles/small.css">
   <link rel="stylesheet" href="styles/chamber.css">
   <script src="scripts/chamber.js" defer></script>
 </head>
