--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Michael Akpan's WDD231 Home Page" />
   <meta name="author" content="Michael Akpan" />
   <title>Michael Akpan | WDD231</title>
+  <link rel="stylesheet" href="styles/index-small.css" />
   <link rel="stylesheet" href="styles/index.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
   <script src="scripts/navigation.js" defer></script>
