--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="images/logo.png" alt="Logo">
     <span>Michael Akpan</span>
   </div>
-  <button id="menu">&#9776;</button> <!-- Optional: Mobile menu -->
+  <button id="menu">&#9776;</button>
 </header>
   <nav>
     <ul class="navigation">
