--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="WDD 231 – Course Home Page by Michael Akpan.">
   <meta name="author" content="Michael Akpan">
   <title>WDD 231 - Michael Akpan</title>
-  <link rel="stylesheet" href="./styles/small.css">
+  <link rel="stylesheet" href="./styles/index.css">
   <link rel="stylesheet" href="./styles/largers.css">
   <script src="./scripts/date.js" defer></script>
   <script src="./scripts/hamburger.js" defer></script>
@@ -40,15 +40,12 @@
     <section class="course-work-grid">
       <div class="card about-me">
         <div class="card-heading">
-          <h2>Course Work</h2>
+          <h2>About me</h2>
         </div>
         <div class="card-content">
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React JS</li>
-          </ul>
+           <p>
+        Hi, I'm Michael Akpan from Akwa Ibom State Nigeria, a passionate web developer in training with a strong interest in building responsive and user-friendly websites. I'm currently studying software development and honing my skills in HTML, CSS, JavaScript, and modern web technologies. I love solving problems, exploring creative ideas, and continuously learning to improve my craft. My goal is to create websites that are not only functional but also visually appealing and accessible to everyone.
+      </p>
         </div>
       </div>
       <div class="card web-resources">
