--- a/chamber.html
+++ b/chamber.html
@@ -14,7 +14,7 @@
     <nav>
       <ul>
         <li><a href="#" class="active">Home</a></li>
-        <li><a href="#">Directory</a></li>
+        <li><a href="directory.html">Directory</a></li>
         <li><a href="#">Join</a></li>
         <li><a href="#">Discover</a></li>
         <li><button id="mode-toggle">🌓</button></li>
