--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Directory | Ikot Ekpene Chamber</title>
-  <meta name="description" content="Directory of businesses in Ikot Ekpene Chamber of Commerce" />
-  <meta name="author" content="Michael Akpan" />
-  <link rel="stylesheet" href="styles/small.css" />
-  <link rel="stylesheet" href="styles/chamber.css" />
+  <meta name="description" content="Directory of businesses in Ikot Ekpene Chamber of Commerce">
+  <meta name="author" content="Michael Akpan">
+  <link rel="stylesheet" href="styles/small.css" >
+  <link rel="stylesheet" href="styles/chamber.css">
   <script src="scripts/directory.js" defer></script>
 </head>
 <body>
