--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -23,10 +23,10 @@
   </header>
 
   <main>
-    <section class="hero">
+    <div class="hero">
       <img src="images/hero.jpg" alt="Hero" class="responsive">
       <button class="cta">Keynote Tickets</button>
-    </section>
+    </div>
 
     <h1>Home</h1>
     <section class="info-panels">
