--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ikot Ekpene Chamber of Commerce</title>
-  <link rel="stylesheet" href="styles/small.css">
-  <link rel="stylesheet" href="styles/chamber.css">
+  <link rel="stylesheet" href="./styles/small.css">
+  <link rel="stylesheet" href="./styles/chamber.css">
   <script src="scripts/chamber.js" defer></script>
 </head>
 <body>
@@ -14,7 +14,7 @@
     <nav>
       <ul>
         <li><a href="#" class="active">Home</a></li>
-        <li><a href="directory.html">Directory</a></li>
+        <li><a href="director.html">Directory</a></li>
         <li><a href="#">Join</a></li>
         <li><a href="#">Discover</a></li>
         <li><button id="mode-toggle">🌓</button></li>
@@ -61,7 +61,7 @@
         <p><strong>URL:</strong> biz1.com</p>
       </div>
       <div class="business-card">
-        <img src="images/business2.jpg" alt="Business 2">
+        <img src="images/greenfarms.png" alt="Business 2">
         <h3>Business Two</h3>
         <p class="tagline">Digital Solutions</p>
         <p><strong>Email:</strong> info@biz2.com</p>
