--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="The Ikot Ekpene Chamber of Commerce promotes local businesses and economic growth. View events, weather updates, and featured members.">
   <title>Ikot Ekpene Chamber of Commerce</title>
   <link rel="stylesheet" href="./styles/small.css">
   <link rel="stylesheet" href="./styles/chamber.css">
@@ -10,37 +11,43 @@
 </head>
 <body>
   <header>
-    <div class="logo">Ikot Ekpene <br><span>Chamber of Commerce</span></div>
+    <div class="logo">
+      Ikot Ekpene <br><span>Chamber of Commerce</span>
+    </div>
     <nav>
       <ul>
         <li><a href="#" class="active">Home</a></li>
-        <li><a href="director.html">Directory</a></li>
+        <li><a href="directory.html">Directory</a></li>
         <li><a href="#">Join</a></li>
         <li><a href="#">Discover</a></li>
-        <li><button id="mode-toggle">🌓</button></li>
+        <li><button id="mode-toggle" aria-label="Toggle Dark Mode">🌓</button></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <div class="hero">
-      <img src="images/hero.jpg" alt="Hero" class="responsive">
-      <button class="cta">Keynote Tickets</button>
-    </div>
+    <section class="hero">
+      <h2 class="visually-hidden">Welcome Banner</h2>
+      <img src="images/hero.jpg" alt="Hero banner of Ikot Ekpene" class="responsive" loading="lazy">
+      <a href="join.html" class="cta">Join Us Today</a>
+    </section>
 
     <h1>Home</h1>
+
     <section class="info-panels">
       <div class="panel">
         <h2>Events</h2>
         <p>Upcoming networking and business events in Ikot Ekpene.</p>
       </div>
+
       <div class="panel" id="weather">
         <h2>Current Weather</h2>
         <p id="weather-details">
-          <img id="weather-icon" src="images/weather.png" alt="Weather Icon" style="width: 50px;"><br>
+          <img id="weather-icon" src="images/weather.png" alt="Weather Icon" style="width: 50px;" loading="lazy"><br>
           <span id="weather-text">Loading...</span>
         </p>
       </div>
+
       <div class="panel">
         <h2>Weather Forecast</h2>
         <ul>
@@ -52,29 +59,9 @@
     </section>
 
     <section class="business-spotlight">
-      <div class="business-card">
-        <img src="images/business1.jpg" alt="Business 1">
-        <h3>Business One</h3>
-        <p class="tagline">Your local cafe</p>
-        <p><strong>Email:</strong> info@biz1.com</p>
-        <p><strong>Phone:</strong> 123-456-7890</p>
-        <p><strong>URL:</strong> biz1.com</p>
-      </div>
-      <div class="business-card">
-        <img src="images/greenfarms.png" alt="Business 2">
-        <h3>Business Two</h3>
-        <p class="tagline">Digital Solutions</p>
-        <p><strong>Email:</strong> info@biz2.com</p>
-        <p><strong>Phone:</strong> 987-654-3210</p>
-        <p><strong>URL:</strong> biz2.com</p>
-      </div>
-      <div class="business-card">
-        <img src="images/business3.jpg" alt="Business 3">
-        <h3>Business Three</h3>
-        <p class="tagline">Home Essentials</p>
-        <p><strong>Email:</strong> info@biz3.com</p>
-        <p><strong>Phone:</strong> 555-123-4567</p>
-        <p><strong>URL:</strong> biz3.com</p>
+      <h2>Member Spotlight</h2>
+      <div id="spotlight-container" class="spotlight-grid">
+        <!-- Cards will be injected via JS -->
       </div>
     </section>
   </main>
@@ -87,9 +74,9 @@
     </div>
 
     <div class="footer-section center socials">
-      <a href="#"><img src="images/youtube.png" alt="Facebook"></a>
-      <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
-      <a href="#"><img src="images/linkedin.png" alt="LinkedIn"></a>
+      <a href="#"><img src="images/youtube.png" alt="YouTube logo" loading="lazy"></a>
+      <a href="#"><img src="images/twitter.png" alt="Twitter logo" loading="lazy"></a>
+      <a href="#"><img src="images/linkedin.png" alt="LinkedIn logo" loading="lazy"></a>
     </div>
 
     <div class="footer-section right">
@@ -98,5 +85,11 @@
       <p>Last Modification: <span id="lastModified"></span></p>
     </div>
   </footer>
+
+  <script>
+    // Footer info
+    document.getElementById("year").textContent = new Date().getFullYear();
+    document.getElementById("lastModified").textContent = document.lastModified;
+  </script>
 </body>
 </html>
