--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -28,7 +28,7 @@
   <main>
     <section class="hero">
       <h2 class="visually-hidden">Welcome Banner</h2>
-      <img src="images/hero.jpg" alt="Hero banner of Ikot Ekpene" class="responsive" loading="lazy">
+      <img src="images/chamber.png" alt="Hero banner of Ikot Ekpene" class="responsive" loading="lazy">
       <a href="join.html" class="cta">Join Us Today</a>
     </section>
 
