--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="#" class="active">Home</a></li>
         <li><a href="directory.html">Directory</a></li>
-        <li><a href="#">Join</a></li>
+        <li><a href="join.html">Join</a></li>
         <li><a href="#">Discover</a></li>
         <li><button id="mode-toggle" aria-label="Toggle Dark Mode">🌓</button></li>
       </ul>
