--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -21,7 +21,7 @@
       <ul>
         <li><a href="chamber.html">Home</a></li>
         <li><a href="#" class="active">Directory</a></li>
-        <li><a href="#">Join</a></li>
+        <li><a href="join.html">Join</a></li>
         <li><a href="#">Discover</a></li>
         <li><button id="mode-toggle" aria-label="Toggle dark mode">🌓</button></li>
       </ul>
