--- a/chamber/join.html
+++ b/chamber/join.html
@@ -14,13 +14,14 @@
     }
 
     .membership-cards .card {
-      background: #fff;
-      padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      text-align: center;
-      animation: fadeInUp 0.6s ease-in-out;
-    }
+  background: #fff;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  text-align: center;
+  animation: fadeInUp 1.2s ease-out forwards;
+  animation-delay: 0.2s;
+}
 
     @keyframes fadeInUp {
       0% {
