--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -19,7 +19,7 @@
         <li><a href="#" class="active">Home</a></li>
         <li><a href="directory.html">Directory</a></li>
         <li><a href="join.html">Join</a></li>
-        <li><a href="#">Discover</a></li>
+        <li><a href="discover.html">Discover</a></li>
         <li><button id="mode-toggle" aria-label="Toggle Dark Mode">🌓</button></li>
       </ul>
     </nav>
