--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -22,7 +22,7 @@
         <li><a href="chamber.html">Home</a></li>
         <li><a href="#" class="active">Directory</a></li>
         <li><a href="join.html">Join</a></li>
-        <li><a href="#">Discover</a></li>
+        <li><a href="discover.html">Discover</a></li>
         <li><button id="mode-toggle" aria-label="Toggle dark mode">🌓</button></li>
       </ul>
     </nav>
