--- a/autofinder/index.html
+++ b/autofinder/index.html
@@ -51,7 +51,7 @@
   <footer>
     <p>&copy; 2025 Michael Akpan | 
       <a href="attributions.html">Attributions</a> | 
-      <a href="https://your-video-link" target="_blank">Video Demo</a>
+      <a href="https://www.loom.com/share/e708c8c782a74349990b8a2176283ece?sid=68e6ba22-9dce-4a09-bf5a-bb4427daea39" target="Cool">Video Demo</a>
     </p>
   </footer>
 
