--- a/autofinder/vehicles.html
+++ b/autofinder/vehicles.html
@@ -38,7 +38,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 Michael Akpan | <a href="attributions.html">Attributions</a> | <a href="https://your-video-link" target="_blank">Video Demo</a></p>
+    <p>&copy; 2025 Michael Akpan | <a href="attributions.html">Attributions</a> | <a href="https://www.loom.com/share/e708c8c782a74349990b8a2176283ece?sid=68e6ba22-9dce-4a09-bf5a-bb4427daea39" target="_blank">Video Demo</a></p>
   </footer>
 
   <script type="module" src="js/vehicles.js"></script>
