--- a/autofinder/about.html
+++ b/autofinder/about.html
@@ -27,14 +27,21 @@
 
   <main>
     <h2>About AutoFinder</h2>
-    <p>AutoFinder was created to help people find reliable and affordable vehicles with ease. We are passionate about cars and use modern web technologies to present data in a clean, usable way.</p>
-    <p>Our mission is to combine performance with clarity — from mobile to desktop — and offer an excellent user experience for all visitors.</p>
+    <p>AutoFinder was established as a dedicated platform for individuals seeking dependable and affordable vehicles without the usual hassles of the car-buying process. Our vision extends far beyond just connecting people with cars we are committed to crafting an experience that is both seamless and enriching. We harness our profound passion for automobiles and fuse it with cutting-edge web technologies, resulting in a system that presents detailed and reliable data in a visually appealing and accessible manner.
+
+At AutoFinder, we believe that finding the right vehicle should be an enjoyable and straightforward journey. Every facet of our platform is thoughtfully designed to ensure that users, whether accessing our website from a mobile device or a desktop, encounter a smooth and intuitive interface. By merging high performance with crystal clear presentation, we empower users to make informed decisions confidently, enjoying a consistent, user-friendly experience every step of the way.</p>
+    <p>Our mission is rooted in the desire to simplify and elevate the vehicle-finding process. We are constantly innovating and refining our approach to deliver not just information, but clarity and trust. By providing a clean, modern, and reliable tool, AutoFinder transforms the way people explore automotive options, ensuring that every visitor can find a vehicle that meets both their needs and expectations all with ease and confidence.</p>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Michael Akpan | <a href="attributions.html">Attributions</a> | <a href="https://www.loom.com/share/e708c8c782a74349990b8a2176283ece?sid=68e6ba22-9dce-4a09-bf5a-bb4427daea39" target="_blank">Video Demo</a></p>
-  </footer>
-
-  <script type="module" src="js/main.js"></script>
+<footer>
+  <p>
+    &copy; 2025 Michael Akpan |
+    <a href="attributions.html">Attributions</a> |
+    <a href="https://www.loom.com/share/e708c8c782a74349990b8a2176283ece?sid=68e6ba22-9dce-4a09-bf5a-bb4427daea39" target="_blank">Video Demo</a>
+  </p>
+  <p>Last Updated: <span id="lastModified"></span></p>
+</footer>
+  
+<script type="module" src="js/main.js"></script>
 </body>
 </html>
