--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li><a href="chamber/chamber.html">Chamber</a></li>
         <li><a href="https://linkedin.com/in/michael-akpan-326b132b9" target="_blank">LinkedIn</a></li>
         <li><a href="https://x.com/MichaelAkp680" target="_blank">Twitter</a></li>
+        <li><a href="autofinder/index.html">Final Project</a></li>
       </ul>
     </nav>
   </header>
