--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -45,11 +45,17 @@
       info@ikotekpenecc.org | +234-800-555-0000</p>
     </div>
 
-    <div class="footer-section center socials">
-      <a href="#"><img src="images/youtube.png" alt="YouTube"></a>
-      <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
-      <a href="#"><img src="images/linkedin.png" alt="LinkedIn"></a>
-    </div>
+      <div class="footer-section center socials">
+  <a href="https://www.youtube.com" aria-label="YouTube">
+    <img src="images/youtube.png" alt="YouTube" loading="lazy">
+  </a>
+  <a href="https://www.twitter.com" aria-label="Twitter">
+    <img src="images/twitter.png" alt="Twitter" loading="lazy">
+  </a>
+  <a href="https://www.linkedin.com" aria-label="LinkedIn">
+    <img src="images/linkedin.png" alt="LinkedIn" loading="lazy">
+  </a>
+</div>
 
     <div class="footer-section right">
       <p>WDD231 Class Project – Michael Akpan</p>
