--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -48,11 +48,17 @@
       </p>
     </div>
 
-    <div class="footer-section center socials">
-      <a href="#"><img src="images/youtube.png" alt="YouTube logo" loading="lazy"></a>
-      <a href="#"><img src="images/twitter.png" alt="Twitter logo" loading="lazy"></a>
-      <a href="#"><img src="images/linkedin.png" alt="LinkedIn logo" loading="lazy"></a>
-    </div>
+     <div class="footer-section center socials">
+  <a href="https://www.youtube.com" aria-label="YouTube">
+    <img src="images/youtube.png" alt="YouTube" loading="lazy">
+  </a>
+  <a href="https://www.twitter.com" aria-label="Twitter">
+    <img src="images/twitter.png" alt="Twitter" loading="lazy">
+  </a>
+  <a href="https://www.linkedin.com" aria-label="LinkedIn">
+    <img src="images/linkedin.png" alt="LinkedIn" loading="lazy">
+  </a>
+</div>
 
     <div class="footer-section right">
       <p>WDD231 Class Project – Michael Akpan</p>
