--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,237 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Join | Ikot Ekpene Chamber of Commerce</title>
-  <link rel="stylesheet" href="styles/small.css">
-  <link rel="stylesheet" href="styles/chamber.css">
-  <style>
-    .membership-cards {
-      display: grid;
-      gap: 1rem;
-      margin-top: 2rem;
-    }
-
-    .membership-cards .card {
-  background: #fff;
-  padding: 1rem;
-  border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-  text-align: center;
-  animation: fadeInUp 1.2s ease-out forwards;
-  animation-delay: 0.2s;
-}
-
-    @keyframes fadeInUp {
-      0% {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    /* Modal Styling */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 10;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0, 0, 0, 0.5);
-    }
-
-    .modal-content {
-      background-color: #fff;
-      margin: 10% auto;
-      padding: 2rem;
-      border: 1px solid #888;
-      width: 90%;
-      max-width: 400px;
-      border-radius: 10px;
-      animation: fadeInUp 0.5s ease-out;
-    }
-
-    .modal .close {
-      float: right;
-      font-size: 24px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    @media (min-width: 768px) {
-      .form-layout {
-        display: flex;
-        gap: 2rem;
-      }
-
-      form {
-        flex: 1;
-      }
-
-      .membership-cards {
-        flex: 1;
-        display: grid;
-        grid-template-columns: 1fr;
-      }
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Join the Chamber</title>
+  <meta name="description" content="Join the Chamber of Commerce form page"/>
+  <link rel="stylesheet" href="styles/join.css"/>
+  <script src="scripts/join.js" defer></script>
 </head>
 <body>
   <header>
-    <div class="logo">Ikot Ekpene <br><span>Chamber of Commerce</span></div>
+    <div class="logo">Ikot Ekpene<br><span>Chamber</span></div>
     <nav>
-      <ul>
+      <ul class="nav-menu">
         <li><a href="chamber.html">Home</a></li>
-        <li><a href="directory.html" class="active">Directory</a></li>
-        <li><a href="join.html">Join</a></li>
+        <li><a href="directory.html">Directory</a></li>
+        <li><a href="join.html" class="active">Join</a></li>
         <li><a href="discover.html">Discover</a></li>
-        <li><button id="mode-toggle" aria-label="Toggle dark mode">🌓</button></li>
       </ul>
     </nav>
   </header>
 
-  <main>
-    <h1>Membership Application Form</h1>
-    <div class="form-layout">
-      <form action="thankyou.html" method="get">
-        <label>
-          First Name:
-          <input type="text" name="firstName" required autocomplete="given-name" title="Enter your first name">
-        </label>
+  <main class="join-container">
+    <form method="get" action="thankyou.html">
+      <fieldset>
+        <legend>Membership Application</legend>
 
-        <label>
-          Last Name:
-          <input type="text" name="lastName" required autocomplete="family-name" title="Enter your last name">
-        </label>
-
-        <label>
-          Title:
-          <input type="text" name="title" pattern="[A-Za-z\s\-]{7,}" title="Minimum 7 characters. Letters, hyphens, and spaces only." autocomplete="organization-title">
-        </label>
-
-        <label>
-          Email:
-          <input type="email" name="email" required autocomplete="email" placeholder="example@email.com" title="Enter a valid email address">
-        </label>
-
-        <label>
-          Cell Phone:
-          <input type="tel" name="phone" required autocomplete="tel" title="Enter your phone number">
-        </label>
-
-        <label>
-          Organization:
-          <input type="text" name="organization" required autocomplete="organization" title="Enter your organization name">
-        </label>
-
-        <label>
-          Membership Level:
-          <select name="membership">
-            <option value="NP">NP Membership</option>
-            <option value="Bronze">Bronze Membership</option>
-            <option value="Silver">Silver Membership</option>
-            <option value="Gold">Gold Membership</option>
+        <label>First Name <input type="text" name="fname" required></label>
+        <label>Last Name <input type="text" name="lname" required></label>
+        <label>Title <input type="text" name="title" pattern="[A-Za-z\s\-]{7,}"></label>
+        <label>Email <input type="email" name="email" required placeholder="you@example.com"></label>
+        <label>Phone <input type="tel" name="phone" required></label>
+        <label>Organization <input type="text" name="organization" required></label>
+        
+        <label>Membership Level
+          <select name="membership" required>
+            <option value="np">NP Membership</option>
+            <option value="bronze">Bronze Membership</option>
+            <option value="silver">Silver Membership</option>
+            <option value="gold">Gold Membership</option>
           </select>
         </label>
 
-        <label>
-          Description:
-          <textarea name="description" title="Describe your business or organization"></textarea>
+        <label>Description
+          <textarea name="description" placeholder="Tell us about your organization"></textarea>
         </label>
 
-        <input type="hidden" id="timestamp" name="timestamp">
-        <input type="submit" value="Apply for Membership">
-      </form>
+        <input type="hidden" name="timestamp" id="timestamp">
+        <input type="submit" value="Apply">
+      </fieldset>
+    </form>
 
-      <section class="membership-cards">
-        <div class="card" id="np">
-          <h3>Non Profit Membership Level</h3>
-          <button type="button" onclick="showModal('modal-np')">Learn More</button>
-        </div>
-        <div class="card" id="bronze">
-          <h3>Bronze Membership Level</h3>
-          <button type="button" onclick="showModal('modal-bronze')">Learn More</button>
-        </div>
-        <div class="card" id="silver">
-          <h3>Silver Membership Level</h3>
-          <button type="button" onclick="showModal('modal-silver')">Learn More</button>
-        </div>
-        <div class="card" id="gold">
-          <h3>Gold Membership Level</h3>
-          <button type="button" onclick="showModal('modal-gold')">Learn More</button>
-        </div>
-      </section>
-    </div>
+    <section class="membership-cards">
+      <h2>Membership Levels</h2>
+
+      <div class="card">
+        <h3>Non Profit</h3>
+        <p>Perfect for NGOs and charities.</p>
+        <button data-modal="modal-np">Learn More</button>
+      </div>
+
+      <div class="card">
+        <h3>Bronze</h3>
+        <p>Basic benefits for small businesses.</p>
+        <button data-modal="modal-bronze">Learn More</button>
+      </div>
+
+      <div class="card">
+        <h3>Silver</h3>
+        <p>Spotlight promotion and job board access.</p>
+        <button data-modal="modal-silver">Learn More</button>
+      </div>
+
+      <div class="card">
+        <h3>Gold</h3>
+        <p>VIP access and advertising credits.</p>
+        <button data-modal="modal-gold">Learn More</button>
+      </div>
+    </section>
 
     <!-- Modals -->
-    <div id="modal-np" class="modal">
-      <div class="modal-content">
-        <span class="close" onclick="closeModal('modal-np')">&times;</span>
-        <h3>NP Membership Benefits</h3>
-        <p>Free listing, newsletter, basic event invites.</p>
-      </div>
-    </div>
-    <div id="modal-bronze" class="modal">
-      <div class="modal-content">
-        <span class="close" onclick="closeModal('modal-bronze')">&times;</span>
-        <h3>Bronze Membership Benefits</h3>
-        <p>Newsletter, event discounts, and small ads.</p>
-      </div>
-    </div>
-    <div id="modal-silver" class="modal">
-      <div class="modal-content">
-        <span class="close" onclick="closeModal('modal-silver')">&times;</span>
-        <h3>Silver Membership Benefits</h3>
-        <p>Bronze perks + spotlight ads + training.</p>
-      </div>
-    </div>
-    <div id="modal-gold" class="modal">
-      <div class="modal-content">
-        <span class="close" onclick="closeModal('modal-gold')">&times;</span>
-        <h3>Gold Membership Benefits</h3>
-        <p>All benefits + sponsorships, premium events, more visibility.</p>
-      </div>
-    </div>
+    <dialog id="modal-np"><h4>NP Benefits</h4><p>Free. Event and training access.</p><button class="close">Close</button></dialog>
+    <dialog id="modal-bronze"><h4>Bronze Benefits</h4><p>Directory listing, newsletter, event invites.</p><button class="close">Close</button></dialog>
+    <dialog id="modal-silver"><h4>Silver Benefits</h4><p>Discounts, job board, promotion slots.</p><button class="close">Close</button></dialog>
+    <dialog id="modal-gold"><h4>Gold Benefits</h4><p>All benefits plus homepage promotion.</p><button class="close">Close</button></dialog>
   </main>
-
-  <footer>
-    <div class="footer-section left">
-      <p><strong>Ikot Ekpene Chamber of Commerce</strong><br>
-      123 Commerce Blvd, Ikot Ekpene, NG<br>
-      info@ikotekpenecc.org | +234-800-555-0000</p>
-    </div>
-    <div class="footer-section center socials">
-      <a href="#"><img src="images/youtube.png" alt="YouTube logo" loading="lazy"></a>
-      <a href="#"><img src="images/twitter.png" alt="Twitter logo" loading="lazy"></a>
-      <a href="#"><img src="images/linkedin.png" alt="LinkedIn logo" loading="lazy"></a>
-    </div>
-    <div class="footer-section right">
-      <p>WDD231 Class Project – Michael Akpan</p>
-      <p>&copy; <span id="year"></span> Ikot Ekpene Chamber of Commerce</p>
-      <p>Last Modification: <span id="lastModified"></span></p>
-    </div>
+ <footer>
+    <p>&copy; <span id="year"></span> Ikot Ekpene Chamber of Commerce | WDD231 Project by Michael Akpan</p>
+    <p>Last Modified: <span id="lastModified"></span></p>
   </footer>
-
-  <script>
-    document.getElementById("timestamp").value = new Date().toISOString();
-
-    function showModal(id) {
-      document.getElementById(id).style.display = "block";
-    }
-
-    function closeModal(id) {
-      document.getElementById(id).style.display = "none";
-    }
-
-    document.getElementById("year").textContent = new Date().getFullYear();
-    document.getElementById("lastModified").textContent = document.lastModified;
-  </script>
 </body>
 </html>
