--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Join the Chamber</title>
-  <meta name="description" content="Join the Chamber of Commerce form page"/>
-  <link rel="stylesheet" href="styles/join.css"/>
+  <meta name="description" content="Join the Chamber of Commerce form page">
+  <link rel="stylesheet" href="styles/small.css">
+  <link rel="stylesheet" href="styles/chamber.css">
+  <link rel="stylesheet" href="styles/join.css">
   <script src="scripts/join.js" defer></script>
 </head>
 <body>
   <header>
     <div class="logo">Ikot Ekpene<br><span>Chamber</span></div>
+    <button id="menu-toggle" aria-label="Toggle Navigation">&#9776;</button>
     <nav>
       <ul class="nav-menu">
         <li><a href="chamber.html">Home</a></li>
