--- a/chamber/join.html
+++ b/chamber/join.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Join the Chamber</title>
   <meta name="description" content="Join the Chamber of Commerce form page">
-  <link rel="stylesheet" href="styles/smal.css">
+  <link rel="stylesheet" href="styles/small.css">
   <link rel="stylesheet" href="styles/chamber.css">
   <link rel="stylesheet" href="styles/join.css">
   <script src="scripts/join.js" defer></script>
