--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Join the Chamber</title>
   <meta name="description" content="Join the Chamber of Commerce form page">
-  <link rel="stylesheet" href="styles/small.css">
+  <link rel="stylesheet" href="styles/small.css">  
   <link rel="stylesheet" href="styles/chamber.css">
   <link rel="stylesheet" href="styles/join.css">
   <script src="scripts/join.js" defer></script>
 </head>
 <body>
-  <header>
-    <div class="logo">Ikot Ekpene<br><span>Chamber</span></div>
-    <button id="menu-toggle" aria-label="Toggle Navigation">&#9776;</button>
+   <header>
+    <div class="logo">
+      Ikot Ekpene <br><span>Chamber of Commerce</span>
+    </div>
     <nav>
-      <ul class="nav-menu">
-        <li><a href="chamber.html">Home</a></li>
+      <ul>
+        <li><a href="#" class="active">Home</a></li>
         <li><a href="directory.html">Directory</a></li>
-        <li><a href="join.html" class="active">Join</a></li>
+        <li><a href="join.html">Join</a></li>
         <li><a href="discover.html">Discover</a></li>
+        <li><button id="mode-toggle" aria-label="Toggle Dark Mode">🌓</button></li>
       </ul>
     </nav>
   </header>
@@ -88,9 +90,31 @@
     <dialog id="modal-silver"><h4>Silver Benefits</h4><p>Discounts, job board, promotion slots.</p><button class="close">Close</button></dialog>
     <dialog id="modal-gold"><h4>Gold Benefits</h4><p>All benefits plus homepage promotion.</p><button class="close">Close</button></dialog>
   </main>
- <footer>
-    <p>&copy; <span id="year"></span> Ikot Ekpene Chamber of Commerce | WDD231 Project by Michael Akpan</p>
-    <p>Last Modified: <span id="lastModified"></span></p>
+
+   <footer>
+    <div class="footer-section left">
+      <p><strong>Ikot Ekpene Chamber of Commerce</strong><br>
+      123 Commerce Blvd, Ikot Ekpene, NG<br>
+      info@ikotekpenecc.org | +234-800-555-0000</p>
+    </div>
+
+  <div class="footer-section center socials">
+  <a href="https://www.youtube.com" aria-label="YouTube">
+    <img src="images/youtube.png" alt="YouTube" loading="lazy">
+  </a>
+  <a href="https://www.twitter.com" aria-label="Twitter">
+    <img src="images/twitter.png" alt="Twitter" loading="lazy">
+  </a>
+  <a href="https://www.linkedin.com" aria-label="LinkedIn">
+    <img src="images/linkedin.png" alt="LinkedIn" loading="lazy">
+  </a>
+</div>
+
+    <div class="footer-section right">
+      <p>WDD231 Class Project – Michael Akpan</p>
+      <p>&copy; <span id="year"></span> Ikot Ekpene Chamber of Commerce</p>
+      <p>Last Modification: <span id="lastModified"></span></p>
+    </div>
   </footer>
 </body>
 </html>
