--- a/chamber/join.html
+++ b/chamber/join.html
@@ -6,7 +6,7 @@
   <title>Join the Chamber</title>
   <meta name="description" content="Join the Chamber of Commerce form page">
   <link rel="stylesheet" href="styles/small.css">  
-  <link rel="stylesheet" href="styles/chamber.css">
+  <link rel="stylesheet" href="styles/chambr.css">
   <link rel="stylesheet" href="styles/join.css">
   <script src="scripts/join.js" defer></script>
 </head>
