--- a/chamber/join.html
+++ b/chamber/join.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Join the Chamber of Commerce form page">
   <link rel="stylesheet" href="styles/small.css">  
   <link rel="stylesheet" href="styles/chamber.css">
-  <link rel="stylesheet" href="styles/joi.css">
+  <link rel="stylesheet" href="styles/join.css">
   <script src="scripts/join.js" defer></script>
   <style>
     body {
