--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,83 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" >
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Join the Chamber</title>
   <meta name="description" content="Join the Chamber of Commerce form page">
-  <link rel="stylesheet" href="styles/small.css">  
+  <link rel="stylesheet" href="styles/small.css">
   <link rel="stylesheet" href="styles/chamber.css">
   <link rel="stylesheet" href="styles/join.css">
   <script src="scripts/join.js" defer></script>
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
-      overflow-x: hidden;
-    }
-    nav ul {
-      list-style: none;
       padding: 0;
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      background: #333;
-      position: absolute;
-      top: 60px;
-      left: 0;
-      right: 0;
-      display: none;
-    }
-    nav ul.show {
-      display: flex;
-    }
-    nav ul li a, #mode-toggle {
-      color: white;
-      padding: 1rem;
-      display: block;
-      text-decoration: none;
-    }
-    #hamburger {
-      font-size: 1.5rem;
-      background: none;
-      border: none;
-      color: #333;
-      cursor: pointer;
+      font-family: sans-serif;
+      overflow-x: hidden;
     }
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 1rem;
-      position: relative;
+      background: #750404;
+      color: #fff;
+    }
+    #hamburger {
+      background: none;
+      border: none;
+      color: #ebe3e3;
+      cursor: pointer;
+    }
+    nav ul {
+      display: flex;
+      list-style: none;
+      padding: 0;
+    }
+    nav ul li {
+      margin-left: 1rem;
+    }
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
     }
     .join-container {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
+      flex-wrap: wrap;
       padding: 1rem;
     }
-    @media(min-width: 768px) {
-      nav ul {
-        display: flex !important;
-        flex-direction: row;
-        position: static;
-        background: none;
-      }
+    form, .membership-cards {
+      flex: 1 1 300px;
+      margin: 1rem;
+    }
+    .membership-cards {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    .card {
+      border: 1px solid #ccc;
+      padding: -0rem;
+      border-radius: 0.5rem;
+      text-align: center;
+      background-color: #e63737;
+    }
+    dialog {
+      padding: 1rem;
+      border: none;
+      border-radius: 0.5rem;
+    }
+    footer {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      padding: 1rem;
+      background: #850808;
+      color: #fff;
+    }
+    .footer-section {
+      flex: 1 1 200px;
+      margin: 0.5rem;
+    }
+    .socials a img {
+      width: 30px;
+      margin-right: 10px;
+    }
+
+    @media (max-width: 768px) {
       #hamburger {
+        display: block;
+      }
+      nav ul {
+        flex-direction: column;
         display: none;
+        background: #333;
+        padding: 1rem;
+      }
+      nav ul.show {
+        display: flex;
       }
       .join-container {
-        flex-direction: row;
-        justify-content: space-between;
+        flex-direction: column;
       }
     }
   </style>
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const hamburger = document.getElementById("hamburger");
-      const navList = document.querySelector("nav ul");
-
-      hamburger.addEventListener("click", () => {
-        navList.classList.toggle("show");
+    document.addEventListener('DOMContentLoaded', function () {
+      const hamburger = document.getElementById('hamburger');
+      const navList = document.querySelector('nav ul');
+      hamburger.addEventListener('click', () => {
+        navList.classList.toggle('show');
       });
     });
   </script>
@@ -110,7 +145,7 @@
         <label>Email <input type="email" name="email" required placeholder="you@example.com"></label>
         <label>Phone <input type="tel" name="phone" required></label>
         <label>Organization <input type="text" name="organization" required></label>
-        
+
         <label>Membership Level
           <select name="membership" required>
             <option value="np">NP Membership</option>
@@ -157,7 +192,6 @@
       </div>
     </section>
 
-    <!-- Modals -->
     <dialog id="modal-np"><h4>NP Benefits</h4><p>Free. Event and training access.</p><button class="close">Close</button></dialog>
     <dialog id="modal-bronze"><h4>Bronze Benefits</h4><p>Directory listing, newsletter, event invites.</p><button class="close">Close</button></dialog>
     <dialog id="modal-silver"><h4>Silver Benefits</h4><p>Discounts, job board, promotion slots.</p><button class="close">Close</button></dialog>
