--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -16,7 +16,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#" class="active">Home</a></li>
+        <li><a href="chamber.html" class="active">Home</a></li>
         <li><a href="directory.html">Directory</a></li>
         <li><a href="join.html">Join</a></li>
         <li><a href="discover.html">Discover</a></li>
